add main section

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,7 @@
 .custom-bg-color{
   background: linear-gradient((#FF0000),(#FF8938));
 }
+.custom-css-card{
+  margin-left: -296px;
+    margin-top: -389px;
+}
